--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
+    "emoji-mart": "^3.0.0",
     "jwt-decode": "^3.0.0-beta.2",
     "moment": "^2.28.0",
     "react": "^16.13.1",
